Finish MVP non-admin backend
- Finish the required backend for non-admin mvp
